next media query

--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -18,6 +18,9 @@ nav {
         padding-left: 50px;
         padding-right: 50px;
     }
+    @media screen and (max-width: 1040px) {
+        display: none;
+    }
 }
 
 a {
