--- a/src/app/shared/home/contact-me/contact-me.component.html
+++ b/src/app/shared/home/contact-me/contact-me.component.html
@@ -32,6 +32,13 @@
       </div>
     </div>
   </div>
+
 </div>
 
 <app-form></app-form>
+
+<div class="back-button-mobile-container">
+  <div class="back-button-mobile" (click)="scrollToTop()">
+    <img src="/assets/img/contact-me/arrow-up.svg" alt="Arrow Up">
+  </div>
+</div>
