--- a/src/app/shared/home/my-skills/my-skills.component.scss
+++ b/src/app/shared/home/my-skills/my-skills.component.scss
@@ -22,6 +22,10 @@
     align-items: center;
     justify-content: center;
     gap: 80px;
+
+    @media screen and (max-width: 1040px) {
+        flex-direction: column;
+    }
 }
 
 .my-skills-item {
@@ -55,4 +59,72 @@
     p{
         width: 300px;
     }
+
+    @media screen and (max-width: 1040px) {
+        display: none;
+    }
+}
+
+.my-skills-text-box-mobile {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    @media screen and (max-width: 1040px) {
+        display: flex;
+    }
+}
+
+.my-skills-text-mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 50px;
+}
+
+.blue {
+    color: rgb(137, 187, 217);
+}
+
+.my-skills-text-mobile-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/assets/img/my-skills/ellipse-default.svg');
+    background-size: contain;
+    width: 400px;
+    height: 130px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.button-box {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    display: none;
+
+    @media screen and (max-width: 1040px) {
+        display: flex;
+    }
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px; 
+  width: 150px; 
+  font-size: 18px;
+  color:rgb(37, 45, 51);
+  background-image: url('/assets/img/why-me/lets-talk-default.svg'); 
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  background-position: center;
+  background-color: rgb(137, 187, 217);
+  border-radius: 30px;
 }
