--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -74,7 +74,7 @@ header {
         }
         .logo-mobile {
             display: flex !important;
-            height: 100%;
+            height: 50vh;
         }
     }
 }
