--- a/src/app/shared/home/contact-me/contact-form/form/form.component.html
+++ b/src/app/shared/home/contact-me/contact-form/form/form.component.html
@@ -8,19 +8,19 @@
   <div class="form-container">
     <div class="row">
       <div class="field">
-        <label>{{ 'FORM_NAME_LABEL' | translate }}</label>
-        <input #nameInput type="text" name="name" required />
+        <label class="input-label">{{ 'FORM_NAME_LABEL' | translate }}</label>
+        <input #nameInput type="text" name="name" required placeholder="{{ 'FORM_NAME_LABEL' | translate }}" />
       </div>
 
       <div class="field">
-        <label>{{ 'FORM_EMAIL_LABEL' | translate }}</label>
-        <input #emailInput type="email" name="email" required />
+        <label class="input-label">{{ 'FORM_EMAIL_LABEL' | translate }}</label>
+        <input #emailInput type="email" name="email" required placeholder="{{ 'FORM_EMAIL_LABEL' | translate }}" />
       </div>
     </div>
 
     <div class="field">
-      <label>{{ 'FORM_MESSAGE_LABEL' | translate }}</label>
-      <textarea #messageInput name="message" required></textarea>
+      <label class="input-label">{{ 'FORM_MESSAGE_LABEL' | translate }}</label>
+      <textarea #messageInput name="message" required placeholder="{{ 'FORM_MESSAGE_LABEL' | translate }}"></textarea>
     </div>
 
     <input type="hidden" name="_subject" value="New contact request" />
