--- a/src/app/shared/home/my-projects/say-about-me/say-about-me/say-about-me.component.scss
+++ b/src/app/shared/home/my-projects/say-about-me/say-about-me/say-about-me.component.scss
@@ -15,16 +15,71 @@
     @media screen and (max-width: 1340px) {
         padding-left: 50px;
         padding-right: 50px;
+
+        .h4-desktop {
+            display: none;
+        }
+
+        .h4-mobile {
+            display: flex !important;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+
+            h4 {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+    @media screen and (max-width: 1040px) {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
 .bubble-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 20px;
+    justify-content: center;
     width: 100%;
 }
+
+/* Scroll erst UNTER 1040px */
+@media (max-width: 1040px) {
+    .bubble-container {
+        overflow-x: auto;
+        overflow-y: hidden;
+        scrollbar-width: none;
+        cursor: grab;
+
+        /* verhindert Body-Scroll */
+        width: 100%;
+        box-sizing: border-box;
+
+        /* Abstand links & rechts OHNE Overflow */
+        padding: 0 50px;
+        scroll-padding-left: 20px;
+        scroll-padding-right: 20px;
+
+        justify-content: flex-start;
+
+        /* nice UX */
+        -webkit-overflow-scrolling: touch;
+        scroll-snap-type: x mandatory;
+
+        .bubble-container::-webkit-scrollbar {
+            display: none;
+        }
+
+        .bubble-container {
+            scrollbar-width: none;
+            scroll-snap-align: start;
+        }
+    }
+}
+
 
 .bubble-box {
     background-image: url(/assets/img/say-about-me/bubble-default.svg);
@@ -39,7 +94,10 @@
     align-items: center;
     text-align: center;
     position: relative;
-    padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+
 
     h5 {
         font-size: 26px;
@@ -55,7 +113,7 @@
         padding-bottom: 10px;
     }
 
-    a{
+    a {
         font-size: 18px;
         color: rgb(137, 186, 217);
     }
@@ -67,14 +125,37 @@
     &:hover {
         background-image: url(/assets/img/say-about-me/bubble-hover.svg);
     }
+
+    @media (max-width: 1240px) {
+        width: 300px;
+
+        h5 {
+            font-size: 24px;
+        }
+
+        p {
+            font-size: 16px;
+        }
+    }
+
+    @media screen and (max-width: 1040px) {
+        .bubble-box {
+            flex: 0 0 auto; 
+            width: 300px;
+        }
+        &:hover {
+            background-image: url(/assets/img/say-about-me/bubble-default.svg);
+        }
+
+    }
 }
 
 .linkedin {
-        font-size: 16px;
-        text-decoration: underline;
-        position: absolute;
-        bottom: 100px;
-        left: 50%;
-        transform: translateX(-50%);
-       
+    font-size: 16px;
+    text-decoration: underline;
+    position: absolute;
+    bottom: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+
 }
