--- a/src/app/shared/home/my-skills/my-skills.component.html
+++ b/src/app/shared/home/my-skills/my-skills.component.html
@@ -4,14 +4,18 @@
   <div class="my-skills-box">
     <div class="my-skills-item">
       <img [ngStyle]="{width: '66px', height: '100px'}" src="/assets/img/my-skills/angular-icon.svg" alt="Angular Icon">
-      <img [ngStyle]="{width: '85px', height: '100px'}" src="/assets/img/my-skills/typescript-icon.svg" alt="Typescript Icon">
-      <img [ngStyle]="{width: '84px', height: '100px'}" src="/assets/img/my-skills/javascript-icon.svg" alt="Javascript Icon">
+      <img [ngStyle]="{width: '85px', height: '100px'}" src="/assets/img/my-skills/typescript-icon.svg"
+        alt="Typescript Icon">
+      <img [ngStyle]="{width: '84px', height: '100px'}" src="/assets/img/my-skills/javascript-icon.svg"
+        alt="Javascript Icon">
       <img [ngStyle]="{width: '54px', height: '100px'}" src="/assets/img/my-skills/html-icon.svg" alt="Html Icon">
       <img [ngStyle]="{width: '70px', height: '100px'}" src="/assets/img/my-skills/css-icon.svg" alt="Css Icon">
       <img [ngStyle]="{width: '80px', height: '100px'}" src="/assets/img/my-skills/api-icon.svg" alt="Api Icon">
-      <img [ngStyle]="{width: '76px', height: '100px'}" src="/assets/img/my-skills/firebase-icon.svg" alt="Firebase Icon">
+      <img [ngStyle]="{width: '76px', height: '100px'}" src="/assets/img/my-skills/firebase-icon.svg"
+        alt="Firebase Icon">
       <img [ngStyle]="{width: '59px', height: '100px'}" src="/assets/img/my-skills/git-icon.svg" alt="Git Icon">
-      <img [ngStyle]="{width: '76px', height: '124px'}" src="/assets/img/my-skills/material-design-icon.svg" alt="Material Design Icon">
+      <img [ngStyle]="{width: '76px', height: '124px'}" src="/assets/img/my-skills/material-design-icon.svg"
+        alt="Material Design Icon">
       <img [ngStyle]="{width: '64.11px', height: '100px'}" src="/assets/img/my-skills/scrum-icon.svg" alt="Scrum Icon">
     </div>
 
@@ -19,6 +23,22 @@
       <p>{{ 'SKILLS_LEARNING_TITLE' | translate }}</p>
       <img src="/assets/img/my-skills/react-vue-js-icons.svg" alt="React Vue Js Icons">
       <p>{{ 'SKILLS_LEARNING_TEXT' | translate }}</p>
+    </div>
+
+    <div class="my-skills-text-box-mobile">
+      <p class="blue">{{ 'SKILLS_LEARNING_TITLE_MOBILE' | translate }}</p>
+      <div class="my-skills-text-mobile">
+        <p>{{ 'SKILLS_LEARNING_TEXT' | translate }}</p>
+        <div class="my-skills-text-mobile-img">
+          <img src="/assets/img/my-skills/react-vue-js-icons.svg" alt="React Vue Js Icons">
+        </div>
+      </div>
+    </div>
+
+    <div class="button-box">
+      <a class="button" href="#contact-me">
+        {{ 'WHY_ME_BUTTON' | translate }}
+      </a>
     </div>
   </div>
 </div>
