--- a/src/app/shared/home/why-me/why-me.component.scss
+++ b/src/app/shared/home/why-me/why-me.component.scss
@@ -14,6 +14,10 @@
     @media screen and (max-width: 1340px) {
         padding-left: 50px;
         padding-right: 50px;
+
+        h2{
+            margin-bottom: 50px;
+        }
     }
 }
 
@@ -22,6 +26,13 @@
     align-items: flex-start;
     justify-content: center;
     gap: 50px;
+
+    @media screen and (max-width: 1240px) {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 50px;
+    }
 }
 
 .from {
@@ -46,6 +57,12 @@
 
     p{
         margin: 0;
+    }
+
+    @media screen and (max-width: 1240px) {
+        p {
+            text-align: center;
+        }
     }
 }
 
@@ -76,5 +93,9 @@
   &:active {
     background-image: url('/assets/img/why-me/lets-talk-click.svg'); 
   }
+
+    @media screen and (max-width: 1240px) {
+        display: none;
+    }
 }
 
