next step media query and create navbar-mobile

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,12 @@
 <header>
+
+  <div class="navbar-mobile">
+    <img src="/assets/img/header/logo-default.svg" alt="Logo Default">
+    <div class="menu-icon">
+      <img src="/assets/img/header/burger-default.svg" alt="Burger Icon Default">
+    </div>
+  </div>
+
   <div class="pass-img-container">
     <div class="pass-background">
       <img src="/assets/img/header/bubble_default.png" alt="pass-background-default">
