--- a/src/app/shared/home/my-projects/projects/projects/projects.component.html
+++ b/src/app/shared/home/my-projects/projects/projects/projects.component.html
@@ -53,9 +53,9 @@
                         <p>{{ 'POKEDEX.LEARNED.CONTENT' | translate }}</p>
                     </div>
                     <div class="button-box-mobile">
-                        <a href="/assets/projects/pokedex/index.html" target="_blank">{{ 'PROJECTS.LIVE_TEST' |
+                        <a class="blue-box" href="/assets/projects/pokedex/index.html" target="_blank">{{ 'PROJECTS.LIVE_TEST' |
                             translate }}</a>
-                        <a href="https://github.com/eisyeic/Pokedex.git" target="_blank">GitHub</a>
+                        <a class="transparenz-box" href="https://github.com/eisyeic/Pokedex.git" target="_blank">GitHub</a>
                     </div>
                 </div>
             </div>
@@ -111,9 +111,9 @@
                         <p>{{ 'ELPOLLO.LEARNED.CONTENT' | translate }}</p>
                     </div>
                     <div class="button-box-mobile">
-                        <a href="/assets/projects/el-pollo-loco/index.html" target="_blank">{{ 'PROJECTS.LIVE_TEST' |
+                        <a class="blue-box" href="/assets/projects/el-pollo-loco/index.html" target="_blank">{{ 'PROJECTS.LIVE_TEST' |
                             translate }}</a>
-                        <a href="https://github.com/eisyeic/El-Pollo-Loco.git" target="_blank">GitHub</a>
+                        <a class="transparenz-box" href="https://github.com/eisyeic/El-Pollo-Loco.git" target="_blank">GitHub</a>
                     </div>
                 </div>
             </div>
@@ -170,9 +170,9 @@
                         <p>{{ 'JOIN.LEARNED.CONTENT' | translate }}</p>
                     </div>
                     <div class="button-box-mobile">
-                        <a href="/assets/projects/join/index.html" target="_blank">{{ 'PROJECTS.LIVE_TEST' | translate
+                        <a class="blue-box" href="/assets/projects/join/index.html" target="_blank">{{ 'PROJECTS.LIVE_TEST' | translate
                             }}</a>
-                        <a href="https://github.com/eisyeic/Join.git" target="_blank">GitHub</a>
+                        <a class="transparenz-box" href="https://github.com/eisyeic/Join.git" target="_blank">GitHub</a>
                     </div>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                     <div class="button-box">
                         <a href="/assets/projects/join/index.html" target="_blank">{{ 'PROJECTS.LIVE_TEST' | translate
                             }}</a>
-                        <a href="https://github.com/eisyeic/Join.git" target="_blank">GitHub</a>
+                        <a class="transparenz-box" href="https://github.com/eisyeic/Join.git" target="_blank">GitHub</a>
                     </div>
                 </div>
             </div>
