--- a/src/app/shared/home/my-projects/projects/projects/projects.component.scss
+++ b/src/app/shared/home/my-projects/projects/projects/projects.component.scss
@@ -51,6 +51,13 @@
     @media screen and (max-width: 1040px) {
         display: flex;
     }
+
+    @media screen and (max-width: 650px) {
+
+        span {
+            font-size: 18px !important;
+        }
+    }
 }
 
 .tab {
@@ -96,7 +103,6 @@
     @media screen and (max-width: 1040px) {
         flex-direction: column-reverse;
         align-items: center;
-        border-radius: 0 30px 30px 30px;
     }
 }
 
@@ -157,10 +163,8 @@
     span {
         font-size: 18px;
         margin: 0;
-    }
 
-    @media screen and (max-width: 1040px) {
-        span {
+        @media screen and (max-width: 1040px) {
             display: none;
         }
     }
@@ -187,8 +191,6 @@
     }
 
     @media screen and (max-width: 1040px) {
-        gap: 0;
-
         span {
             display: none;
         }
@@ -283,48 +285,35 @@
     }
 }
 
-
-@media screen and (max-width: 1040px) {
-    .picture-area {
-        align-items: flex-start;
-        position: relative;
-
-        .screen,
-        .screen-cover,
-        .white-screen {
-            display: block;
-            margin-left: 50%;
-            transform: translateX(-50%);
-        }
-
-        .white-screen {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    }
-}
-
 .button-box-mobile {
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-top: 50px;
+    padding-bottom: 20px;
 
-    @media screen and (max-width: 1040px) {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        padding-top: 50px;
+    .transparenz-box {
+        width: 120px;
+        height: 50px;
+        border-radius: 30px;
+        border: 1.5px solid rgb(137, 187, 217);
+        font-size: 18px;
+        color: rgb(137, 187, 217);
+        background-color: transparent;
+        text-align: center;
+        line-height: 50px;
+    }
 
-        a {
-            width: 120px;
-            height: 50px;
-            border-radius: 30px;
-            border: 1.5px solid rgb(137, 187, 217);
-            font-size: 18px;
-            color: rgb(137, 187, 217);
-            background-color: transparent;
-            text-align: center;
-            line-height: 50px;
-        }
+    .blue-box {
+        width: 120px;
+        height: 50px;
+        border-radius: 30px;
+        border: 1.5px solid rgb(137, 187, 217);
+        font-size: 18px;
+        color: rgb(37, 45, 51);
+        background-color: rgb(137, 187, 217);
+        text-align: center;
+        line-height: 50px;
     }
 }
